--- a/src/Pages/Home/RunningCar/RunningCar.css
+++ b/src/Pages/Home/RunningCar/RunningCar.css
@@ -25,19 +25,27 @@ img.wheel {
   transform: translate(600px, 0px) rotate(600deg);
 }
 
-.device-sm .running-car.in-view img.car {
-  transform: translate(500px, 0px) rotate(0deg);
-}
-.device-sm .running-car.in-view img.wheel {
-  transform: translate(500px, 0px) rotate(600deg);
-}
+@media only screen and (max-width: 768px) {
+  .runnig-box {
+    position: inherit;
+    width: 80%;
+  }
 
-.device-xs .running-car.in-view img.car {
-  transform: translate(350px, 0px) rotate(0deg);
-}
-.device-xs .running-car.in-view img.wheel {
-  transform: translate(350px, 0px) rotate(600deg);
-}
+  img.car,
+  img.wheel {
+    transition: none;
+    margin-left: 0;
+  }
 
-/* @media only screen and (max-width: ) {
-} */
+  img.wheel {
+    position: inherit;
+    display: none;
+  }
+
+  .in-view img.car {
+    transform: translate(0px, 0px) rotate(0deg);
+  }
+  .in-view img.wheel {
+    transform: translate(0px, 0px) rotate(0deg);
+  }
+}
