--- a/src/Pages/Shared/Navigation/Navigation.css
+++ b/src/Pages/Shared/Navigation/Navigation.css
@@ -2,11 +2,14 @@
 .logo {
   width: 70%;
 }
+.navbar a,
 .nav-link {
   font-size: 18px;
+  padding: 5px 10px;
+}
+.nav-link {
   color: #16425b;
   font-weight: 500;
-  padding: 5px 10px;
   transition: 0.4s;
   position: relative;
 }
@@ -34,5 +37,7 @@
 
 .nav-selected {
   color: #457b9d;
+  font-size: 18px;
   font-weight: bold;
+  padding: 5px 10px;
 }
