--- a/src/styles/Car.module.css
+++ b/src/styles/Car.module.css
@@ -1,19 +1,19 @@
-.car-thumb {
+.carThumb {
   transition: 0.5s;
 }
-.car-thumb:hover {
+.carThumb:hover {
   transform: scale(1.1);
 }
-.car-thumb-box {
+.carThumbBox {
   position: relative;
 }
-.car-price {
+.carPrice {
   position: absolute;
   top: 10px;
   left: 0px;
   background: #457b9d;
   color: #fff;
-  width: 40%;
+  width: 30%;
   border-radius: 0 50px 50px 0;
   padding: 2px 12px;
 }
