updated project structure

--- a/src/styles/Payment.module.css
+++ b/src/styles/Payment.module.css
@@ -1,20 +1,22 @@
-.checkout-form {
+.checkoutForm {
   width: 30vw;
   min-width: 500px;
   align-self: center;
-  box-shadow: 0px 0px 0px 0.5px rgba(50, 50, 93, 0.1),
-    0px 2px 5px 0px rgba(50, 50, 93, 0.1), 0px 1px 1.5px 0px rgba(0, 0, 0, 0.07);
+  box-shadow:
+    0px 0px 0px 0.5px rgba(50, 50, 93, 0.1),
+    0px 2px 5px 0px rgba(50, 50, 93, 0.1),
+    0px 1px 1.5px 0px rgba(0, 0, 0, 0.07);
   border: 1px solid #ddd;
   border-radius: 10px;
   padding: 40px;
   margin: auto;
 }
-.card-element {
+.cardElement {
   margin-bottom: 34px;
 }
 
 /* Buttons and links */
-.checkout-form button {
+.checkoutForm button {
   border-radius: 4px;
   font-size: 16px;
   font-weight: 600;
@@ -24,7 +26,7 @@
   width: 100%;
 }
 
-.checkout-form button:disabled {
+.checkoutForm button:disabled {
   opacity: 0.5;
   cursor: default;
 }
